enrich code